--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://github.com/HukakHePak" class="sign">HukakHePak</a>
+    <header class="header_calc">
+        <a href="https://github.com/HukakHePak" class="sign">HukakHePak</a>
+    </header>
     <main>
         <div class="calculator_block">
             <div class="calculator_text">
@@ -16,26 +18,32 @@
                 <input type="text" class="calculator_result" id="1" value="" disabled>
             </div>
             <div class="calculator_buttons">
-                <button class="calculator_button theme" onclick="Calc.Clear()">CE</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('**')">^</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('%')">%</button>
+                <a href="https://github.com/HukakHePak/calc-plus" class="calculator_button calculator_link">
+                    <img class="calc_link-img" src="./images/gh-ico.png" alt="GitHub/HukakHePak">
+                </a>
+                <button class="calculator_button" onclick="Calc.AddSymbol('**')">^</button>
+                <button class="calculator_button" onclick="Calc.AddSymbol('%')">%</button>
+                <button class="calculator_button" onclick="Calc.Clear()">CE</button>
+                <button class="calculator_button theme" onclick="Calc.AddSymbol('(')">(</button>
+                <button class="calculator_button theme" onclick="Calc.AddSymbol(')')">)</button>
                 <button class="calculator_button theme" onclick="Calc.DelSymbol()">C</button>
+                <button class="calculator_button theme" onclick="Calc.AddSymbol('/')">÷</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('7')">7</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('8')">8</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('9')">9</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('/')">÷</button>
+                <button class="calculator_button theme" onclick="Calc.AddSymbol('*')">×</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('4')">4</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('5')">5</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('6')">6</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('*')">×</button>
+                <button class="calculator_button theme" onclick="Calc.AddSymbol('-')">-</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('1')">1</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('2')">2</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('3')">3</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('-')">-</button>
+                <button class="calculator_button theme plus" onclick="Calc.AddSymbol('+')">+</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('0')">0</button>
                 <button class="calculator_button theme" onclick="Calc.AddSymbol('.')">.</button>
                 <button class="calculator_button" onclick="Calc.Result()">=</button>
-                <button class="calculator_button theme" onclick="Calc.AddSymbol('+')">+</button>
+                
             </div>
         </div>
     </main>
