end all exceptions, go test!

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                 <input type="text" class="calculator_result" id="1" value="" disabled>
             </div>
             <div class="calculator_buttons">
-                <a href="https://github.com/HukakHePak/calc-plus" class="calculator_button calculator_link">
-                    <img class="calc_link-img" src="./images/gh-ico.png" alt="GitHub/HukakHePak">
-                </a>
+                <a href="https://github.com/HukakHePak/calc-plus" class="calculator_button calculator_link"></a>
                 <button class="calculator_button" onclick="Calc.AddSymbol('**')">^</button>
                 <button class="calculator_button" onclick="Calc.AddSymbol('%')">%</button>
                 <button class="calculator_button" onclick="Calc.Clear()">CE</button>
